examples/failing/TypeWildcards1.purs
-- @shouldFailWith ErrorParsingModule
module TypeWildcards where

import Prelude

type Test = _

